# INAV-Toolkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  inav_blackbox_analyzer.py  inav_flight_db.py  inav_msp.py  inav_param_analyzer.py  inav_toolkit.py  inav_vtol_configurator.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
blackbox/: blackbox_log_2026-02-21_145057.TXT
docs/: BLACKBOX_ANALYZER.md  CHEATSHEET.md  NAV_ANALYZER.md  PARAM_ANALYZER.md  TUNING_WORKFLOW.md  VTOL_CONFIGURATOR.md
inav_toolkit/: __init__.py  autotune.py  blackbox_analyzer.py  flight_db.py  flight_tools.py  i18n.py  msp.py  param_analyzer.py  vtol_configurator.py  wizard.py
inav_toolkit/locales/: en.json  es.json  pt_BR.json
tests/: conftest.py  generate_fixtures.py  test_basic_diff.txt  test_smoke.py  test_vtol_diff.txt
tests/fixtures/: clean_hover.csv  noisy_motors.csv  over_tuned.csv  short_flight.csv  under_tuned.csv
